Prevent window overflow lower digit count

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ body {
     display: flex;
     justify-content: end;
     align-items: center;
+    overflow: hidden;
 }
 
 .calc-input {
